--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "theme-starter",
-  "title": "Starter Theme",
+  "name": "smoky-theme",
+  "title": "Smoky Theme",
   "displayName": "Starter Theme",
   "theme": "ui",
   "version": "0.1.0",
-  "description": "A great dark theme to start your own themes.",
+  "description": "A great dark theme.",
   "license": "GPL-3.0",
   "engines": {
     "mailspring": "*"
   }
 }
-
